style: fix spacing of header components

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -54,6 +54,6 @@
     @apply border-border;
   }
   body {
-    @apply min-h-dvh overflow-hidden bg-background text-foreground;
+    @apply h-dvh overflow-hidden bg-background text-foreground;
   }
 }
